Mon Apr 11 08:29:50 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/ciao/Container_Impl.cpp:
        * DAnCE/ciao/Dynamic_Component_Activator.cpp:
        * DAnCE/ciao/Dynamic_Component_Activator.h:
        * DAnCE/ciao/NodeApplication_Impl.cpp:
        * DAnCE/ciao/NodeApplication_Impl.h:
        * DAnCE/ciao/Swapping_Container.cpp:
        * DAnCE/ciao/Swapping_Container.h:
        
          Fixed various glitches with environment variables, unused variables,
          and ACE_TRY macros.

Mon Apr 11 07:12:54 CDT 2005  Will Otte <wotte@dre.vanderbit.edu>
	
	* DAnCE/Config_Handlers/Basic_Deployment_Data.hpp

	Fixed a compile error.
	
Sun Apr 10 18:44:22 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>
	
	* DAnCE/Config_Handlers/Basic_Deployment_Data.cpp
	* DAnCE/Config_Handlers/Basic_Deployment_Data.hpp
	* DAnCE/Config_Handlers/ccd.cpp
	* DAnCE/Config_Handlers/ccd.hpp

	Regenerated the handlers to reflect the changes in the previous
	commit. 
	
Sat Apr 09 18:35:23 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>

        * docs/schema/Basic_Deployment_Data.xsd
        * docs/schema/ccd.xsd
        
          Updated schemas to reflect changes made to Modified_Deployment
          in conformance to the spec.

Sat Apr 09 17:15:23 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher.mpc
  
          Changed the after clause to point to the XSC_Config_Handlers
          instad of the old config handlers.
    
Sat Apr 09 23:59:40 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DAnCE/DomainApplicationManager/Deployment_Configuration.cpp

	  Fixed a bug where duplicated CORBALOC specified in the 
	  NodeManagerMap could cause undetected exception. This fix
	  will allow such duplication IOR error to be detected explicitly
	  and error message will be printed out. Thanks Steve Baker
	  <Steven_D_Baker@raytheon.com> for report this bug.

Fri Apr  8 14:30:52 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>
	