@@ -1,3 +1,9 @@
+Mon Apr 11 13:43:47 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>
+	
+	* DAnCE/Plan_Launcher/Plan_Launcher.cpp
+
+	Corrected the ExecutionManager narrow operation.
+	
 Mon Apr 11 08:29:50 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * DAnCE/ciao/Container_Impl.cpp:
